deploy/qas/k8s-yaml/qas-yifu-app-mvp-webmvp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yifu-qas-webmvp
  namespace: qas-mvp
  labels:
    k8s-app: yifu-qas-webmvp
spec:
  ports:
    - name: yifu-qas-webmvp
      port: 80
      protocol: TCP
      targetPort: 8888
  selector:
    app: yifu-qas-webmvp
